[tool.poetry]
name = "ddia"
version = "0.1.0"
description = "Examples from Designing Data Intensive Applications"
authors = ["Denis Dallinga <denisdallinga+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
